--- a/app/views/login/signin.njk
+++ b/app/views/login/signin.njk
@@ -2,8 +2,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Portal Unicel</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/my-login.css">
+	<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/my-login.css">
 </head>
 
 <body class="my-login-page">
@@ -12,12 +12,12 @@
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<img src="img/logo.jpg">
+						<img src="/img/logo.jpg">
 					</div>
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Login</h4>
-							<form method="post" action="includes/process_login.php" name="login_form">
+							<form method="post" action="" name="login_form">
 
 								<div class="form-group">
 									<label for="email">E-Mail</label>
@@ -42,7 +42,7 @@
 								</div>
 
 								<div class="form-group no-margin">
-									<input type="submit" value="Login" onClick="formhash(this.form, this.form.password);" class="btn btn-primary btn-block"/>
+									<input type="submit" value="Login" class="btn btn-primary btn-block"/>
 								</div>
 							</form>
 						</div>
@@ -53,9 +53,9 @@
 		</div>
 	</section>
 
-	<script src="js/jquery.min.js"></script>
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/my-login.js"></script>
+	<script src="/js/jquery.min.js"></script>
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/js/my-login.js"></script>
 </body>
 
 </html>
