--- a/app/public/bootstrap/css/bootstrap.css
+++ b/app/public/bootstrap/css/bootstrap.css
@@ -4859,7 +4859,7 @@ input[type="button"].btn-block {
 }
 
 .alert {
-  position: relative;
+  position: absolute;
   padding: 0.75rem 1.25rem;
   margin-bottom: 1rem;
   border: 1px solid transparent;
