--- a/app/views/dashboard/index.njk
+++ b/app/views/dashboard/index.njk
@@ -1,1 +1,9 @@
-{% include 'includes/sideBar.njk' %}
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  {% include 'includes/head.njk' %}
+</head>
+<body>
+  {% include 'includes/sideBar.njk' %}
+</body>
+</html>
