--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -2,7 +2,7 @@
 <aside class="sidebar">
 	<div class="logo-sidebar">
 		<a href="./dashboard">
-			<img class="logo-main" src="/img/undlogo.png" title="Portal Unicel">
+			<img class="logo-main" src="" title="Portal Unicel">
 			<img class="logo-mini" src="/img/alianca.png" title="Portal Unicel">
 		</a>
 	</div>
@@ -10,7 +10,7 @@
 	<div id="leftside-navigation">
 		<ul>
 			<li>
-				<a class="waves-btn-hover current" href="/obz/modulos/dashboard/index.asp">
+				<a class="waves-btn-hover current" href="./dashboard">
 					<i class="fa fa-dashboard tooltip" title="Dashboard" aria-hidden="true"></i>
 					<span class="link">Dashboard</span>
 				</a>
@@ -18,98 +18,67 @@
 
       <li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fa fa-users tooltip" title="Gente" aria-hidden="true"></i>
+					<i class="fa fa-users tooltip" title="Pessoas" aria-hidden="true"></i>
 					<span class="link">Pessoas</span>
 					<i class="fa fa-angle-right arrow"></i>
 				</a>
 				<ul>
-					<li><a href="/obz/modulos//index.asp">Membros</a></li>
-					<li><a href="/obz/modulos//index.asp">Visitantes</a></li>
-					<li><a href="/obz/modulos//index.asp">Headcount</a></li>
+					<li><a href="">Membros</a></li>
+					<li><a href="">Visitantes</a></li>
 
-					<li class="sub-menu-3">
+					<!--<li class="sub-menu-3">
 						<a href="javascript:void(0);" class="waves-btn-hover">
 							<span class="link">Cadastro</span>
 							<i class="fa fa-angle-right arrow"></i>
 						</a>
 						<ul>
-							<li><a href="/obz/modulos//index.asp">Cargo</a></li>
-							<li><a href="/obz/modulos//index.asp">Funcionários</a></li>
-							<li><a href="/obz/modulos//index.asp">Centro de Custo</a></li>
-							<li><a href="/obz/modulos//index.asp">Plano de Saúde</a></li>
-							<li><a href="/obz/modulos//index.asp">Empresas</a></li>
-							<li><a href="/obz/modulos//index.asp">Conta Contábil Gente</a></li>
-							<li><a href="/obz/modulos//index.asp">Dias Úteis</a></li>
-							<li><a href="/obz/modulos//index.asp">Config Controle Headcount</a></li>
-							<li><a href="/obz/modulos//index.asp">Modelo PPR</a></li>
+							<li><a href="">Cargo</a></li>
+							<li><a href="">Funcionários</a></li>
+							<li><a href="">Centro de Custo</a></li>
+							<li><a href="">Plano de Saúde</a></li>
+							<li><a href="">Empresas</a></li>
+							<li><a href="">Conta Contábil Gente</a></li>
+							<li><a href="">Dias Úteis</a></li>
+							<li><a href="">Config Controle Headcount</a></li>
+							<li><a href="">Modelo PPR</a></li>
 						</ul>
 					</li>
-					<li><a href="/obz/modulos//index.asp">Dashboard</a></li>
+					<li><a href="/obz/modulos//index.asp">Dashboard</a></li>-->
  				</ul>
 			</li>
 
 			<li>
-				<a class="waves-btn-hover" href="/obz/modulos//index.asp">
-					<i class="fa fa-money tooltip" title="Receita" aria-hidden="true"></i>
+				<a class="waves-btn-hover" href="">
+					<i class="fa fa-money tooltip" title="Financeiro" aria-hidden="true"></i>
 					<span class="link">Financeiro</span>
-				</a>
-			</li>
-
-			<li>
-				<a class="waves-btn-hover" href="/obz/modulos//index.asp">
-					<i class="fa fa-calculator tooltip" title="Custos" aria-hidden="true"></i>
-					<span class="link">Custos</span>
 				</a>
 			</li>
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fa fa-file-text-o tooltip" title="Capex" aria-hidden="true"></i>
-					<span class="link">Capex</span>
+					<i class="fa fa-file-text-o tooltip" title="Células" aria-hidden="true"></i>
+					<span class="link">Células</span>
 					<i class="fa fa-angle-right arrow"></i>
 				</a>
 				<ul>
-					<li><a href="/obz/modulos//index.asp">Orçamento</a></li>
-					<li><a href="/obz/modulos//index.asp">Incluir Capex</a></li>
+					<li><a href="">Cadastro</a></li>
  				</ul>
 			</li>
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="fa fa-bars tooltip" title="Projetos" aria-hidden="true"></i>
-					<span class="link">Projetos</span>
+					<i class="fa fa-line-chart tooltip" title="Relatórios" aria-hidden="true"></i>
+					<span class="link">Relatórios</span>
 					<i class="fa fa-angle-right arrow"></i>
 				</a>
 				<ul>
-					<li><a href="/obz/modulos//index.asp">Visão Geral</a></li>
-					<li><a href="/obz/modulos//index.asp">Por Funcionário</a></li>
-					<li><a href="/obz/modulos//index.asp">Por Projeto</a></li>
+					<li><a href="">Relatório 1</a></li>
+					<li><a href="">Relatório 2</a></li>
+					<li><a href="">Relatório 3</a></li>
+					<li><a href="">Relatório 4</a></li>
  				</ul>
 			</li>
 
-			<li class="sub-menu">
-				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="fa fa-line-chart tooltip" title="Relatórios/Kpi" aria-hidden="true"></i>
-					<span class="link">Relatórios/Kpi</span>
-					<i class="fa fa-angle-right arrow"></i>
-				</a>
-				<ul>
-					<li><a href="/obz/modulos//index.asp">Base Orçamento</a></li>
-					<li><a href="/obz/modulos//index.asp">Base Custos</a></li>
-					<li><a href="/obz/modulos//index.asp">Base Receitas</a></li>
-					<li><a href="/obz/modulos//index.asp">Base Capex/Plant</a></li>
-					<li><a href="/obz/modulos//index.asp">Base </a></li>
-					<li><a href="/obz/modulos//index.asp">Resumo Área</a></li>
-					<li><a href="/obz/modulos//index.asp">P&L Marca</a></li>
- 				</ul>
-			</li>
-
-			<li>
-				<a class="" href="/obz/modulos/fluxo/index.asp">
-					<i class="fa fa-clipboard tooltip" title="Fluxo de Aprovação" aria-hidden="true"></i>
-					<span class="link">Fluxo de Aprovação</span>
-				</a>
-			</li>
 		</ul>
 	</div>
 </aside>
