--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -25,25 +25,6 @@
 				<ul>
 					<li><a href="">Membros</a></li>
 					<li><a href="">Visitantes</a></li>
-
-					<!--<li class="sub-menu-3">
-						<a href="javascript:void(0);" class="waves-btn-hover">
-							<span class="link">Cadastro</span>
-							<i class="fa fa-angle-right arrow"></i>
-						</a>
-						<ul>
-							<li><a href="">Cargo</a></li>
-							<li><a href="">Funcionários</a></li>
-							<li><a href="">Centro de Custo</a></li>
-							<li><a href="">Plano de Saúde</a></li>
-							<li><a href="">Empresas</a></li>
-							<li><a href="">Conta Contábil Gente</a></li>
-							<li><a href="">Dias Úteis</a></li>
-							<li><a href="">Config Controle Headcount</a></li>
-							<li><a href="">Modelo PPR</a></li>
-						</ul>
-					</li>
-					<li><a href="/obz/modulos//index.asp">Dashboard</a></li>-->
  				</ul>
 			</li>
 
@@ -56,7 +37,7 @@
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fa fa-file-text-o tooltip" title="Células" aria-hidden="true"></i>
+					<i class="fa fa-home tooltip" title="Células" aria-hidden="true"></i>
 					<span class="link">Células</span>
 					<i class="fa fa-angle-right arrow"></i>
 				</a>
@@ -65,9 +46,23 @@
  				</ul>
 			</li>
 
+      <li class="sub-menu">
+				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
+					<i class="fa fa-bar-chart tooltip" title="Gráficos" aria-hidden="true"></i>
+					<span class="link">Gráficos</span>
+					<i class="fa fa-angle-right arrow"></i>
+				</a>
+				<ul>
+					<li><a href="">Gráfico 1</a></li>
+					<li><a href="">Gráfico 2</a></li>
+					<li><a href="">Gráfico 3</a></li>
+					<li><a href="">Gráfico 4</a></li>
+ 				</ul>
+			</li>
+
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="fa fa-line-chart tooltip" title="Relatórios" aria-hidden="true"></i>
+					<i class="fa fa-sticky-note tooltip" title="Relatórios" aria-hidden="true"></i>
 					<span class="link">Relatórios</span>
 					<i class="fa fa-angle-right arrow"></i>
 				</a>
