Criaçãr tela de cadastro de pessoas

--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -2,7 +2,7 @@
 <aside class="sidebar">
 	<div class="logo-sidebar">
 		<a href="./dashboard">
-			<img class="logo-main" src="" title="Portal Unicel">
+			<img class="logo-main" src="/img/udnlogo.png" title="Portal Unicel">
 			<img class="logo-mini" src="/img/alianca.png" title="Portal Unicel">
 		</a>
 	</div>
@@ -23,7 +23,7 @@
 					<i class="fa fa-angle-right arrow"></i>
 				</a>
 				<ul>
-					<li><a href="">Membros</a></li>
+					<li><a href="./modulos">Membros</a></li>
 					<li><a href="">Visitantes</a></li>
  				</ul>
 			</li>
