--- a/app/views/includes/head.njk
+++ b/app/views/includes/head.njk
@@ -10,6 +10,7 @@
 <link href="/css/mdb.css" rel="stylesheet">
 <!-- Your custom styles (optional) -->
 <link href="/css/style.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/css/my-login.css">
 <!-- JQuery -->
 <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap tooltips -->
@@ -19,3 +20,4 @@
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="/js/mdb.min.js"></script>
 <script type="text/javascript" src="/js/style.js"></script>
+<script type="text/javascript" src="/js/my-login.js"></script>
