--- a/app/views/login/signin.njk
+++ b/app/views/login/signin.njk
@@ -1,11 +1,6 @@
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Portal Unicel - Login</title>
-	<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/my-login.css">
-  <script src="/js/jquery.min.js"></script>
-	<script src="/bootstrap/js/bootstrap.min.js"></script>
+  {% include 'includes/head.njk' %}
 </head>
 <body class="my-login-page">
 {% include 'partials/flash.njk' %}
@@ -54,6 +49,5 @@
 			</div>
 		</div>
 	</section>
-	<script src="/js/my-login.js"></script>
 </body>
 </html>
