--- a/app/views/includes/head.njk
+++ b/app/views/includes/head.njk
@@ -21,3 +21,4 @@
 <script type="text/javascript" src="/js/mdb.min.js"></script>
 <script type="text/javascript" src="/js/style.js"></script>
 <script type="text/javascript" src="/js/my-login.js"></script>
+<script type="text/javascript" src="/js/jquery.mask.js"></script>
