--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -1,7 +1,7 @@
 <!-- https://codepen.io/maggiben/pen/rCIFu -->
 <aside class="sidebar">
 	<div class="logo-sidebar">
-		<a href="./dashboard">
+		<a href="/app/dashboard">
 			<img class="logo-main" src="/img/undlogo.png" title="Portal Unicel">
 			<img class="logo-mini" src="/img/alianca.png" title="Portal Unicel">
 		</a>
@@ -10,36 +10,35 @@
 	<div id="leftside-navigation">
 		<ul>
 			<li>
-				<a class="waves-btn-hover current" href="./dashboard">
-					<i class="fas fa-dashboard tooltip" title="Dashboard" aria-hidden="true"></i>
+				<a class="waves-btn-hover" href="/app/dashboard">
+					<i class="fas fa-tachometer-alt" title="Dashboard" aria-hidden="true"></i>
 					<span class="link">Dashboard</span>
 				</a>
 			</li>
 
       <li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fa fa-users tooltip" title="Pessoas" aria-hidden="true"></i>
+					<i class="fa fa-users" title="Pessoas" aria-hidden="true"></i>
 					<span class="link">Pessoas</span>
-					<i class="fas fa-angle-right arrow"></i>
+					<i class="fas fa-angle-down arrow"></i>
 				</a>
 				<ul>
-					<li><a href="./modulos/pessoas">Membros</a></li>
-					<li><a href="">Visitantes</a></li>
+					<li><a href="/app/modulos/pessoas">Membros</a></li>
  				</ul>
 			</li>
 
 			<li>
 				<a class="waves-btn-hover" href="">
-					<i class="fas fa-money tooltip" title="Financeiro" aria-hidden="true"></i>
+					<i class="far fa-money-bill-alt" title="Financeiro" aria-hidden="true"></i>
 					<span class="link">Financeiro</span>
 				</a>
 			</li>
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fas fa-home tooltip" title="Células" aria-hidden="true"></i>
+					<i class="fas fa-home" title="Células" aria-hidden="true"></i>
 					<span class="link">Células</span>
-					<i class="fas fa-angle-right arrow"></i>
+					<i class="fas fa-angle-down arrow"></i>
 				</a>
 				<ul>
 					<li><a href="">Cadastro</a></li>
@@ -48,9 +47,9 @@
 
       <li class="sub-menu">
 				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="fas fa-bar-chart tooltip" title="Gráficos" aria-hidden="true"></i>
+					<i class="far fa-chart-bar" title="Gráficos" aria-hidden="true"></i>
 					<span class="link">Gráficos</span>
-					<i class="fas fa-angle-right arrow"></i>
+					<i class="fas fa-angle-down arrow"></i>
 				</a>
 				<ul>
 					<li><a href="">Gráfico 1</a></li>
@@ -62,9 +61,9 @@
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="fas fa-sticky-note tooltip" title="Relatórios" aria-hidden="true"></i>
+					<i class="fas fa-file-alt" title="Relatórios" aria-hidden="true"></i>
 					<span class="link">Relatórios</span>
-					<i class="fas fa-angle-right arrow"></i>
+					<i class="fas fa-angle-down arrow"></i>
 				</a>
 				<ul>
 					<li><a href="">Relatório 1</a></li>
