--- a/app/views/modulos/pessoas/form_membros.njk
+++ b/app/views/modulos/pessoas/form_membros.njk
@@ -1,6 +1,6 @@
 <form class="needs-validation" novalidate>
   <fieldset>
-        <legend>Cadastro</legend>
+        <legend>Dados Pessoais</legend>
 
         <div class="form-row">
           <div class="form-group col-md-4">
@@ -43,20 +43,20 @@
 
         <div class="form-group col-md-2">
           <label for="cpf">CPF:</label>
-          <input type="text" class="form-control" name="cpf">
+          <input type="text" class="form-control cpf" name="cpf">
         </div>
 
         <div class="form-group col-md-2">
           <label for="telefone">Telefone:</label>
-          <input type="tel" class="form-control" name="telefone" required>
+          <input type="tel" class="form-control tel_ddd" name="telefone" required>
         </div>
 
         <div class="form-group col-md-2">
           <label for="celular">Celular:</label>
-          <input type="tel" class="form-control" name="celular" required>
+          <input type="tel" class="form-control cel" name="celular" required>
         </div>
 
-        <div class="col-md-1">
+        <div class="col-md-1 clearfix">
           <label></label>
           <button type="submit" class="btn btn-primary btn-sm form-control">Salvar</button>
         </div>
@@ -64,6 +64,74 @@
       </div>
   </fieldset>
 </form>
+
+<form class="needs-validation" novalidate>
+  <fieldset>
+        <legend>Endereço</legend>
+
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label for="cep">Cep:</label>
+            <input type="tex" class="form-control cep" name="cep" required>
+          </div>
+
+          <div class="form-group col-md-4">
+            <label for="estado">Estado:</label>
+            <input type="text" class="form-control" name="estado" required>
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="cidade">Cidade:</label>
+            <input type="text" class="form-control" name="cidade" required>
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="sexo">Sexo:</label>
+            <select name="sexo" class="form-control" required>
+              <option value="" disabled selected>Selecione</option>
+              <option value="1">Masculino</option>
+              <option value="2">Feminino</option>
+            </select>
+          </div>
+        </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-2">
+          <label for="estadocivil">Estado Civil:</label>
+          <select name="estadocivil" class="form-control" required>
+            <option value="" disabled selected>Selecione</option>
+            <option value="1">Solteiro(a)</option>
+            <option value="2">Casado(a)</option>
+            <option value="3">Divorciado(a)</option>
+            <option value="4">Viuvo(a)</option>
+            <option value="5">União Estável</option>
+          </select>
+        </div>
+
+        <div class="form-group col-md-2">
+          <label for="logradouro">Logradouro:</label>
+          <input type="text" class="form-control" name="logradouro">
+        </div>
+
+        <div class="form-group col-md-2">
+          <label for="numero">Número:</label>
+          <input type="text" class="form-control" name="numero" required>
+        </div>
+
+        <div class="form-group col-md-2">
+          <label for="bairro">Bairro:</label>
+          <input type="text" class="form-control" name="bairro" required>
+        </div>
+
+        <div class="col-md-1 clearfix">
+          <label></label>
+          <button type="submit" class="btn btn-primary btn-sm form-control">Salvar</button>
+        </div>
+
+      </div>
+  </fieldset>
+</form>
+
 
 
 <!-- /Start your project here-->
@@ -87,4 +155,12 @@
     });
   }, false);
 })();
+
+$(document).ready(function(){
+  $('.date').mask('11/11/1111');
+  $('.cep').mask('00000-000');
+  $('.tel_ddd').mask('(00) 0000-0000');
+  $('.cel').mask('(00) 00000-0000');
+  $('.cpf').mask('000.000.000-00', {reverse: true});
+});
 </script>
