--- a/app/views/modulos/pessoas/membros.njk
+++ b/app/views/modulos/pessoas/membros.njk
@@ -22,7 +22,7 @@
 	      </div><!-- .breadcrumb -->
 
 				<div class="container-fluid">
-					<div class="card">
+					<div class="card-body">
             {% include 'modulos/pessoas/form_membros.njk' %}
             {% include 'modulos/pessoas/listagem.njk' %}
 			    </div>
