--- a/app/public/css/mdb.css
+++ b/app/public/css/mdb.css
@@ -4517,12 +4517,12 @@ a.waves-effect, a.waves-light {
     color: #4285f4; }
 
 .btn-outline-primary {
-  border: 2px solid #4285f4 !important;
-  background-color: transparent !important;
+  border: 1px solid #4285f4 !important;
+  background-color: #f7f9fb !important;
   color: #4285f4 !important; }
   .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary:active:focus, .btn-outline-primary.active {
     border-color: #4285f4 !important;
-    background-color: transparent !important;
+    background-color: #f7f9fb !important;
     color: #4285f4 !important; }
   .btn-outline-primary:not([disabled]):not(.disabled):active, .btn-outline-primary:not([disabled]):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
