--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -223,10 +223,32 @@ position: absolute;
   background-color: #23313f;
 }
 /**----------------------------------------------------------------------------
- * Wrapper Page
+ * body, containers
  *
  * @section structure
 */
+
+html,body{ height: auto;}
+
+html {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+}
+
+body {
+    color: #666;
+    line-height: 1.42857143;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    word-wrap: break-word;
+	background-color: #f2f4f8;
+}
+
+.container{ max-width: 1170px;}
+.container-fluid { padding-right: 20px; padding-left: 20px;}
+
 .wrapper-page > .content-page ,
 .logo-top,
 .logo-top.logo-mini,
@@ -255,6 +277,7 @@ position: absolute;
 
 .space-sidebar{ padding-left: 260px!important;}
 .space-sidebar-ajust{ padding-left: 60px!important;}
+
 
 /**----------------------------------------------------------------------------
  * header
@@ -311,7 +334,7 @@ position: absolute;
         transition: all 0.5s ease;
     will-change: box-shadow,transform;
 }
-.toggle-sidebar a i.fas {
+.toggle-sidebar a i.fa {
     line-height: normal;
     font-size: 16px;
     -webkit-transition: all 0.3s ease-out;
@@ -320,7 +343,7 @@ position: absolute;
     -ms-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
-.toggle-sidebar a i.fas.sidebar-mini:before { content: "\f00b";}
+.toggle-sidebar a i.fa.sidebar-mini:before { content: "\f00b";}
 
 .toggle-sidebar a:hover{
     color: #999;
@@ -349,7 +372,7 @@ position: absolute;
 }
 .nav-top ul li a:hover{ color: #333;}
 
-.nav-top ul li a i.fas{ font-size: 22px;}
+.nav-top ul li a i.fa{ font-size: 22px;}
 .nav-top ul li a span{ font-size: 12px; display: block; display: none;}
 
 .nav-top ul li a.btn-travado{
@@ -397,6 +420,102 @@ position: absolute;
 .nav-top ul li a .count-info-top.yellow { background-color: #f1c40f;}
 .nav-top ul li a .count-info-top.grey   { background-color: #555555;}
 .nav-top ul li a .count-info-top.black  { background-color: #222222;}
+
+
+/**----------------------------------------------------------------------------
+ * footer
+ *
+ * @section structure
+*/
+
+.footer-main {
+    position: absolute;
+    bottom: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #f9f9fa;
+    border-top: 1px solid #e1e6ef;
+}
+.footer-main span{
+    display: block;
+    font-size: 11px;
+    text-align: center;
+}
+
+/* Responsivo heade e footer */
+/* 1300 */
+@media (max-width: 1300px) {
+    .wrapper-page > .content-page { }
+}
+/* 980 */
+@media (max-width: 980px) {
+    .wrapper-page > .content-page { }
+
+}
+/* 768 */
+@media (max-width: 768px) {
+    .header-main #btn-toggle-sidebar{ display: none;}
+    .space-sidebar{ padding-left: 70px!important;}
+
+    .logo-top img.logo-main{ display: none;}
+    .logo-top img.logo-mini{ display: inline!important;}
+
+    .nav-top { float: none; margin: 0 auto;}
+    .nav-top ul { text-align: center;}
+    .nav-top ul li a i.fa{ font-size: 18px;}
+}
+
+/* 680 */
+@media (max-width: 680px) {
+    .header-main.topbar { position: relative;}
+    .nav-top ul li a { padding: 0 5px;}
+    .wrapper-page > .content-page {
+        margin-top: 0!important;
+        padding-top: 0!important;
+        padding-bottom: 0!important;
+    }
+}
+
+/* 480 */
+@media (max-width: 480px) {
+    .header-main .container-fluid{ padding: 2px;}
+    .nav-top{ float: none; text-align: center;}
+    .nav-top ul li a { padding: 0 3px;}
+    .nav-top ul li a i.fa { font-size: 16px;}
+}
+
+
+/**============================================================================
+ * DEFAULT
+ *
+ *
+ * @section default
+ */
+
+::-webkit-scrollbar           { -webkit-appearance: none;}
+::-webkit-scrollbar:vertical  { width: 10px;}
+::-webkit-scrollbar:horizontal{ height: 10px;}
+
+::-webkit-scrollbar-thumb {
+    background-color: #99CDDC;
+    border-radius: 6px;
+    border: 2px solid transparent;
+}
+::-webkit-scrollbar-track {
+    border-radius: 6px;
+    background-color: #0081A8;
+}
+
+
+a{
+    color: #3bafda;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+a:hover{ color: #0080A5;}
 
 /**----------------------------------------------------------------------------
  * tooltipste
