--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -15,7 +15,24 @@
   background-color: #FFF;
   box-shadow: 0 16px 38px -12px rgba(0,0,0,.56), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
 }
-
+.fa-tachometer-alt {
+  color: #fbe717;
+}
+.fa-money-bill-alt {
+  color: #fbe717;
+}
+.fa-users {
+  color: #fbe717;
+}
+.fa-home {
+  color: #fbe717;
+}
+.fa-chart-bar {
+  color: #fbe717;
+}
+.fa-file-alt {
+  color: #fbe717;
+}
 .sidebar .logo-sidebar{
   position: relative;
   text-align: center;
@@ -240,7 +257,7 @@ html {
 body {
     color: #666;
     line-height: 1.42857143;
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Roboto', sans-serif;
     word-wrap: break-word;
 	background-color: #f2f4f8;
@@ -334,7 +351,7 @@ body {
         transition: all 0.5s ease;
     will-change: box-shadow,transform;
 }
-.toggle-sidebar a i.fa {
+.toggle-sidebar a i.fas {
     line-height: normal;
     font-size: 16px;
     -webkit-transition: all 0.3s ease-out;
@@ -343,7 +360,7 @@ body {
     -ms-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
-.toggle-sidebar a i.fa.sidebar-mini:before { content: "\f00b";}
+.toggle-sidebar a i.fas.sidebar-mini:before { content: "\f00b";}
 
 .toggle-sidebar a:hover{
     color: #999;
@@ -372,7 +389,7 @@ body {
 }
 .nav-top ul li a:hover{ color: #333;}
 
-.nav-top ul li a i.fa{ font-size: 22px;}
+.nav-top ul li a i.fas{ font-size: 22px;}
 .nav-top ul li a span{ font-size: 12px; display: block; display: none;}
 
 .nav-top ul li a.btn-travado{
@@ -402,7 +419,7 @@ body {
     right: -8px;
     top: -12px;
     padding: 3px 5px;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 1;
     color: #fff;
     text-align: center;
@@ -462,7 +479,7 @@ body {
 
     .nav-top { float: none; margin: 0 auto;}
     .nav-top ul { text-align: center;}
-    .nav-top ul li a i.fa{ font-size: 18px;}
+    .nav-top ul li a i.fas{ font-size: 18px;}
 }
 
 /* 680 */
@@ -481,7 +498,7 @@ body {
     .header-main .container-fluid{ padding: 2px;}
     .nav-top{ float: none; text-align: center;}
     .nav-top ul li a { padding: 0 3px;}
-    .nav-top ul li a i.fa { font-size: 16px;}
+    .nav-top ul li a i.fas { font-size: 16px;}
 }
 
 
