--- a/app/views/includes/header.njk
+++ b/app/views/includes/header.njk
@@ -26,7 +26,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="" title="Sair" href="/logout">
+					<a title="Sair" href="/logout">
 						<i class="fas fa-sign-out-alt" aria-hidden="true"></i>
 						<span>Sair</span>
 					</a>
