--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -41,7 +41,7 @@
 					<i class="fas fa-angle-down arrow"></i>
 				</a>
 				<ul>
-					<li><a href="">Cadastro</a></li>
+					<li><a href="/app/modulos/celulas">Cadastro</a></li>
  				</ul>
 			</li>
 
